--- a/hammers.yml
+++ b/hammers.yml
@@ -6,7 +6,8 @@
 #  data: set item data such as color or damage
 #  enchanted: should the hammer have the enchanted glow
 #  amount: how much should the hammer fix
-#  consume: should the hammer be consumed when used
+#  consume: should the hammer consumed durablity when used, doesn't work for percentage hammers
+#  destroy: should the hammer be destroyed when used
 #  cost:
 #    use: cost to used
 #    buy: cost to buy
@@ -38,10 +39,16 @@ test1:
   #or you can have a percent
   #amount: 50%
   amount: 50%
-  #when a player uses the hammers should it be remove
+  #should the hammer have a durability that is cunsumed as it is used
+  #if hammer has a percent for its fix amount consume will always be false
+  #true - hammer can fix up to its fix amount across any number of items
+  #false - a hammer always fixes its fix amount
+  consume: false
+  #when a player uses the hammers should the hammer item be destroyed
+  #if consume is true it will be destroyed at 0 durability left otherwise it will be consumed on its first use
   #true - hammer is destroyed on use
   #false - you can use the hammer more than once
-  consume: true
+  destroy: true
   #cost is the cost to buy or use the hammer
   #if you are not using vault make sure to set both to 0 or 0.0 or you will get warnings
   cost:
@@ -97,6 +104,7 @@ hammer2:
   enchanted: true
   amount: 50
   consume: true
+  destroy: true
   cost:
     buy: 1000.0
     use: 0.0
@@ -122,7 +130,8 @@ swordhammer1:
   data: 0
   enchanted: true
   amount: 100%
-  consume: true
+  consume: false
+  destroy: true
   cost:
     buy: 50.0
     use: 50.0
