--- a/config.yml
+++ b/config.yml
@@ -176,6 +176,7 @@ fixlist:
     - STONE_PICKAXE
     - STONE_SPADE
     - STONE_SWORD
+    - TRIDENT
     - WOOD_AXE
     - WOOD_HOE
     - WOOD_PICKAXE
