--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,8 @@ name: RepairHammers
 author: Sungcad
 website: https://www.spigotmc.org/resources/repair-hammers.44699/
 main: me.sungcad.repairhammers.RepairHammerPlugin
-version: 1.1.3
+version: 1.1.5
+api-version: 1.15
 softdepend:
   - Vault
   - RPGItems
