fix bug when hammer is dropped from inventory

--- a/config.yml
+++ b/config.yml
@@ -135,6 +135,7 @@ fixlist:
     - CHAINMAIL_CHESTPLATE
     - CHAINMAIL_HELMET
     - CHAINMAIL_LEGGINGS
+    - CROSSBOW
     - DIAMOND_AXE
     - DIAMOND_BOOTS
     - DIAMOND_CHESTPLATE
