add sound, fix error on reload

--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/Sungcad/eclipse-workspace/jars/spigot-1.12.jar"/>
-	<classpathentry kind="lib" path="/home/Sungcad/eclipse-workspace/jars/Vault.jar"/>
-	<classpathentry kind="lib" path="/home/Sungcad/eclipse-workspace/jars/rpgitem-reloaded-1.11-v.290.jar"/>
-	<classpathentry kind="lib" path="/home/Sungcad/eclipse-workspace/jars/AdditionsAPI-1.2.8-SNAPSHOT-shaded.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sungcad/eclipse-workspace/jars/spigot-1.15.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sungcad/eclipse-workspace/jars/Vault.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sungcad/eclipse-workspace/jars/rpgitem-reloaded-1.11-v.290.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Sungcad/eclipse-workspace/jars/AdditionsAPI-1.2.10-SNAPSHOT-shaded.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
