--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,3 @@
-
 # for color codes use &
 
 # ways you can use the hammers to fix items set at least one to true
@@ -79,7 +78,8 @@ shop:
   # set to [] to add nothing
   addedlore:
     - "cost to buy $<cost>"
-
+#check for updates
+update: true
 # section for error  messages
 error:
   # errors if a player tries to do something they don't have permission for.
@@ -143,20 +143,20 @@ fixlist:
     - DIAMOND_HOE
     - DIAMOND_LEGGINGS
     - DIAMOND_PICKAXE
-    - DIAMOND_SPADE
+    - DIAMOND_SHOVEL
     - DIAMOND_SWORD
     - ELYTRA
     - FISHING_ROD
     - FLINT_AND_STEEL
-    - GOLD_AXE
-    - GOLD_BOOTS
-    - GOLD_CHESTPLATE
-    - GOLD_HELMET
-    - GOLD_HOE
-    - GOLD_LEGGINGS
-    - GOLD_PICKAXE
-    - GOLD_SPADE
-    - GOLD_SWORD
+    - GOLDEN_AXE
+    - GOLDEN_BOOTS
+    - GOLDEN_CHESTPLATE
+    - GOLDEN_HELMET
+    - GOLDEN_HOE
+    - GOLDEN_LEGGINGS
+    - GOLDEN_PICKAXE
+    - GOLDEN_SHOVEL
+    - GOLDEN_SWORD
     - IRON_AXE
     - IRON_BOOTS
     - IRON_CHESTPLATE
@@ -164,7 +164,7 @@ fixlist:
     - IRON_HOE
     - IRON_LEGGINGS
     - IRON_PICKAXE
-    - IRON_SPADE
+    - IRON_SHOVEL
     - IRON_SWORD
     - LEATHER_BOOTS
     - LEATHER_CHESTPLATE
@@ -175,18 +175,18 @@ fixlist:
     - STONE_AXE
     - STONE_HOE
     - STONE_PICKAXE
-    - STONE_SPADE
+    - STONE_SHOVEL
     - STONE_SWORD
     - TRIDENT
     - WOOD_AXE
     - WOOD_HOE
     - WOOD_PICKAXE
-    - WOOD_SPADE
+    - WOOD_SHOVEL
     - WOOD_SWORD
   # this list lets a hammer fix swords
   swords:
     - WOOD_SWORD
     - STONE_SWORD
     - IRON_SWORD
-    - GOLD_SWORD
+    - GOLDEN_SWORD
     - DIAMOND_SWORD
